2002-01-22  shawn  <sabetts@vcn.bc.ca>

	* nethack-api.el (nethack-api-choose-role): remove function
	(nethack-api-choose-race): likewise
	(nethack-api-choose-gender): likewise
	(nethack-api-choose-alignment): likewise

2002-01-21  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-api.el (nethack-menu): Remove variable.
	(nethack-menu-toggle-item, nethack-menu-toggle-all-items)
	(nethack-menu-goto-next, nethack-menu-goto-prev)
	(nethack-menu-submit, nethack-menu-cancel)
	(nethack-api-start-menu, nethack-api-add-menu)
	(nethack-api-end-menu): Rewrite to remove ewoc dependancy.

	* nethack.el (nethack): Don't setq nethack-menu.

	* nethack-api.el (ewoc): Remove require.
	(nethack-menu-item-print): Remove function.

2002-01-20  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-keys.el: Add bindings for remaining functions.

	* nethack-cmd.el: Define remaining functions.

2002-01-18  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-api.el (nethack-api-ask-direction): Correct se and sw
	correspondances.

2002-01-17  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-api.el (nethack-api-getlin): Handle Quit.

	* nethack.el (nethack-map-mode-syntax-table): Add '{' and '}'.

2002-01-16  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-keys-dvorak.el (nethack-map-mode-hook): Add binding for
	nethack-command-offer.

	* nethack-api.el (nethack-api-print-status-numeric): Remove
	function.
	(nethack-api-print-status-string): Remove function.
	(nethack-print-status-string): Add function.
	(nethack-api-update-status): Use nethack-print-status.
	(nethack-api-raw-print): Print to nethack-message-buffer.
	(nethack-api-exit-nhwindows): Don't clean up buffers.
	(nethack-api-display-nhwindow): Try to print text to
	nethack-message-buffer.
	(nethack-restore-window-configuration): Remove buffer dedication
	of status window.
	(nethack-api-end-menu): Don't move the point.
	(nethack-api-select-menu): Use the window displaying the message
	buffer for the menu, and enlarge it only if necessary.
